--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This application creates dynamic HTML5 forms using existing HTML5 input types and replacements for them if needed
+This application creates dynamic HTML5 forms using existing HTML5 input types and replacements for them if needed.
